feat: update portfolio layout and components
- Updated package.json to include Tailwind CSS version 4.1.3 and added devDependencies.
- Redesigned index.astro to include a Navbar, Footer, and structured content sections.
- Created Footer.astro component for consistent footer design.
- Added Hero.astro component for a visually appealing introduction section.
- Implemented Navbar.astro component for navigation across the portfolio.
- Updated tailwind.config.js to include .astro files in the content paths.

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.6.1",
+    "astro": "^5.6.1"
+  },
+  "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^4.1.3"
   }
 }
